Fix problems with saveChanges

--- a/Contacts/appsettings.json
+++ b/Contacts/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-1B2GHMAM\\SQLEXPRESS;Database=ContactsTestTask;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=localhost;Database=TemplateContext;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
